--- a/segundolink.html
+++ b/segundolink.html
@@ -16,9 +16,10 @@
 
 
 
-
+<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a>
+<a href="segundolink.html"><font color=red>Clique aqui para entrar no segundo link</font></a>
 <a href="terceirolink.html"><font color=red>Clique aqui para entrar no terceiro link</font></a>
-
+<a href="quartolink.html"><font color=red>Clique aqui para entrar no quarto link</font></a>
 </center>
 </body>
 </html>
