--- a/terceirolink.html
+++ b/terceirolink.html
@@ -17,10 +17,9 @@
 
 
 
-<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a>
-<a href="segundolink.html"><font color=red>Clique aqui para entrar no segundo link</font></a>
-<a href="terceirolink.html"><font color=red>Clique aqui para entrar no terceiro link</font></a>
-<a href="quartolink.html"><font color=red>Clique aqui para entrar no quarto link</font></a>
+<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a><br>
+<a href="segundolink.html"><font color=red>Clique aqui para entrar no segundo link</font></a><br>
+<a href="quartolink.html"><font color=red>Clique aqui para entrar no quarto link</font></a><br>
 
 </center>
 </body>
