--- a/quartolink.html
+++ b/quartolink.html
@@ -17,9 +17,10 @@
 
 
 
-<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a><br>
+<a href="index.html"><font color=red>Clique aqui para ir no iníco ''primeiro link''</font></a><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 <a href="segundolink.html"><font color=red>Clique aqui para entrar no segundo link</font></a><br>
-<a href="terceirolink.html"><font color=red>Clique aqui para entrar no terceiro link</font></a><br>
+<a href="terceirolink.html"><font color=red>Clique aqui para voltar no terceiro link</font></a><br>
 
 </center>
 </body>
