--- a/segundolink.html
+++ b/segundolink.html
@@ -16,8 +16,10 @@
 
 
 
-<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a><br>
+
 <a href="terceirolink.html"><font color=red>Clique aqui para entrar no terceiro link</font></a><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<a href="index.html"><font color=red>Clique aqui para voltar no primeiro link</font></a><br>
 <a href="quartolink.html"><font color=red>Clique aqui para entrar no quarto link</font></a><br>
 </center>
 </body>
