--- a/terceirolink.html
+++ b/terceirolink.html
@@ -17,9 +17,11 @@
 
 
 
-<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a><br>
-<a href="segundolink.html"><font color=red>Clique aqui para entrar no segundo link</font></a><br>
+
 <a href="quartolink.html"><font color=red>Clique aqui para entrar no quarto link</font></a><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<a href="index.html"><font color=red>Clique aqui para entrar no primeiro link</font></a><br>
+<a href="segundolink.html"><font color=red>Clique aqui para voltar no segundo link</font></a><br>
 
 </center>
 </body>
