--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
 
 
 
-
-
-
-
-
-
-
-
+<imput type="text">
+<imput type="password">  
+<imput type="checkbox">
+<imput type="email">  
+<imput type="number">
+<imput type="file">                      
+<imput type="radio">                         
+<imput type="button">                           
+<imput type="color">                            
+<imput type="image">                                   
+<imput type="hidden">                                       
+<imput type="time">                                              
+<imput type="date">                                                
+<imput type="datetime-local">                                                       
+<imput type="week">                                                       
+<imput type="month">
+<imput type="url">
+<imput type="search">
+<imput type="tel">
+<imput type="range">
+<imput type="submit">
+<imput type="reset">
 
 
 
